# protheus

./: .dockerignore  .env.example  .fdignore  .gitattributes  .gitignore  .rgignore  AGENT-CONSTITUTION.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  EULA.md  GOVERNANCE.md  HEARTBEAT.md  IDENTITY.md  INFRING_REPO_ANALYSIS.md  LEARNINGS_INDEX.md  LICENSE  LICENSE-INFRING-NC-1.0  LICENSE_MATRIX.json  LICENSE_SCOPE.md  MEMORY.md  MEMORY_INDEX.md  PERFORMANCE_THROUGHPUT_AUDIT_FIX_PLAN.md  README.md  SCRAPY_RUNTIME_IMPLEMENTATION_SPEC.md  SECURITY.md  SRS.md  TAGS_INDEX.md  TERMS_OF_SERVICE.md  TEST_COVERAGE_IMPLEMENTATION_PLAN.md  TODO.md  TOOLS.md  UPGRADE_BACKLOG.md  codex.helix  codex_enforcer.md  docker-compose.yml  (+14 more)
client/pure-workspace/: Cargo.toml
client/pure-workspace/src/: lib.rs  main.rs
client/pure-workspace/tests/: v9_pure_intel_passthrough.rs
core/layer0/desktop/: Cargo.toml
core/layer0/desktop/src/: lib.rs  main.rs
core/layer0/infring_agent_surface/: Cargo.toml
core/layer0/infring_agent_surface/src/: agent.rs  capability_pack.rs  lib.rs  mcp.rs  merkle_receipt.rs  native_tools.rs  provider.rs  rbac_memory.rs  realtime_voice.rs  runtime_lane.rs  runtime_lane_integration_tests.rs  runtime_lane_unit_tests.rs  runtime_state.rs  scheduler.rs  telemetry.rs  template.rs  wasm_sandbox.rs
core/layer0/kernel_layers/: Cargo.toml
core/layer0/kernel_layers/src/: lib.rs
core/layer0/ops/: Cargo.toml  authority_domains.json
core/layer0/ops/config/: batch_query_policy.json  egress_gateway_policy.json  kernel_naming_policy.json  live_eval_monitor_policy.json  provider_network_policy.json  rust_source_of_truth_policy.json  secret_broker_policy.json  state_tier_manifest.json  web_conduit_policy.json
core/layer0/ops/src/: ab_lane_eval.rs  action_envelope_kernel.rs  action_envelope_kernel.tests.rs  action_receipts_kernel.combined.rs  action_receipts_kernel.rs  adaptive_intelligence.rs  adaptive_layer_store_kernel.rs  adaptive_runtime.rs  agency_plane.rs  alpha_readiness.rs  app_plane.rs  approval_gate_kernel.rs  asm_plane.rs  assimilate_kernel.rs  assimilate_kernel_support.rs  assimilation_controller.rs  attention_queue.rs  audit_log_export.rs  autonomy_controller.rs  autonomy_receipt_schema_kernel.rs  autoresearch_loop.rs  autotest_controller.rs  autotest_doctor.rs  (+349 more)
core/layer1/infring_types/: Cargo.toml
core/layer1/observability/: Cargo.toml
core/layer1/primitives/: Cargo.toml  circle_queue.rs  hash_index.rs  mod.rs  queue_list.rs
core/layer1/security/: Cargo.toml
core/layer2/nexus/: Cargo.toml
core/layer2/ops/: Cargo.toml
crates/kernel_layers/: Cargo.toml
crates/kernel_layers/src/: lib.rs
crates/ops/: Cargo.toml
crates/ops/src/: assimilation_controller.rs  audit_log_export.rs  autotest_controller.rs  autotest_doctor.rs  backlog_registry.rs  backlog_runtime_anchor.rs  benchmark_matrix.rs  contract_check.rs  enterprise_hardening.rs  f100_readiness_program.rs  f100_reliability_certification.rs  fluxlattice_program.rs  foundation_contract_gate.rs  hardware_route_hardening.rs  health_status.rs  identity_federation.rs  inversion_controller.rs  legacy_bridge.rs  legacy_retired_lane.rs  lib.rs  main.rs  model_router.rs  offline_runtime_guard.rs  perception_polish.rs  personas_core.rs  protheusctl.rs  rollout_rings.rs  scale_readiness.rs  sdlc_change_control.rs  sensory_eyes_intake.rs  shadow_budget_governance.rs  spine.rs  strategy_mode_governor.rs  supply_chain_provenance_v2.rs
surface/orchestration/: Cargo.toml
surface/orchestration/config/: agent_routing_rules.json  eval_authority_calibration_policy.json  eval_issue_candidate_dedupe_policy.json  legacy_ingress_budget_ratchet_schedule.json  live_eval_policy.json  provider_onboarding_manifest.json  request_surface_probe_authority_policy.json  self_maintenance_noise_discipline_policy.json  trust_zones.json  workflow_executor_policy.json
surface/orchestration/scripts/: adaptive_defense_expansion.ts  client_relationship_manager.ts  economic_entity_manager.ts  experiment_scheduler.ts  gated_account_creation_organ.ts  gated_self_improvement_loop.ts  hold_remediation_engine.ts  learning_conduit.ts  lever_experiment_gate.ts  llm_gateway_failure_classifier.ts  meta_science_active_learning_loop.ts  model_catalog_loop.ts  morph_planner.ts  payment_skills_bridge.ts  personas_orchestration.ts  proactive_t1_initiative_engine.ts  provider_onboarding_manifest.ts  quantum_security_primitive_synthesis.ts  research_organ.ts  route_execute.ts  route_task.ts  scientific_method_loop.ts  scientific_mode_v4.ts  self_improvement_cadence_orchestrator.ts  self_improving_redteam_trainer.ts  strategy_learner.ts  swarm_orchestration_runtime.ts  task_decomposition_primitive.ts  universal_outreach_primitive.ts  value_of_information_collection_planner.ts  zero_permission_conversational_layer.ts
surface/orchestration/src/: assimilation_authority.rs  clarification.rs  continuous_eval.rs  contracts.rs  eval.rs  eval_action_economy_guard.rs  eval_agent_feedback.rs  eval_agent_feedback_tests.rs  eval_agent_feedback_utils.rs  eval_agent_self_diagnosis.rs  eval_authority_calibration.rs  eval_calibration_stats.rs  eval_chat_report.rs  eval_contamination_guard.rs  eval_feedback_router.rs  eval_final_runtime.rs  eval_grader_hacking.rs  eval_issue_authority.rs  eval_issue_runtime.rs  eval_learning_loop.rs  eval_learning_loop_issue_candidates.rs  eval_learning_loop_policy.rs  eval_learning_loop_policy_version.rs  eval_learning_loop_review.rs  eval_learning_loop_rsi_handoff.rs  eval_lifecycle_runtime.rs  eval_metamorphic_guard.rs  eval_multiturn_simulation.rs  eval_production_workflow_guard.rs  eval_rsi_promotion_guard.rs  eval_synthetic_user_chat_harness.rs  eval_synthetic_user_chat_harness_tests.rs  eval_synthetic_user_chat_harness_utils.rs  eval_trace_localization.rs  eval_trajectory_scoring.rs  ingress.rs  legacy_ingress_budget.rs  lib.rs  orchestration_stability_guard.rs  posture.rs  (+12 more)
surface/orchestration/tests/: conformance.rs  control_plane_subdomains.rs  self_maintenance.rs
(+15729 files in other folders)
