[workspace]
resolver = "2"
members = [
  "crates/blob_test",
  "crates/execution",
  "crates/fluxlattice",
  "crates/memory",
  "systems/memory/rust",
  "systems/self_audit/rust",
  "systems/hybrid/rust"
]

[workspace.package]
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[workspace.metadata.protheus]
msrv = "1.84.0"
owner = "runtime-foundation"
