[package]
name = "protheus-pure-workspace"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"

[lib]
name = "protheus_pure_workspace"
path = "src/lib.rs"

[[bin]]
name = "protheus-pure-workspace"
path = "src/bin/protheus-pure-workspace.rs"

[[bin]]
name = "infring-pure-workspace"
path = "src/bin/infring-pure-workspace.rs"

[dependencies]
