[package]
name = "infring-pure-workspace"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"

[lib]
name = "infring_pure_workspace"
path = "src/lib.rs"

[[bin]]
name = "infring-pure-workspace"
path = "src/main.rs"

[[bin]]
name = "infring-pure-workspace"
path = "src/bin/infring-pure-workspace.rs"

[dependencies]
