[package]
name = "kernel_layers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Compile-time kernel layer topology for portable Rust-only substrate builds."

[features]
default = ["layer3"]
layer0 = ["dep:task", "dep:resource"]
layer1 = ["layer0", "dep:isolation", "dep:ipc", "dep:storage", "dep:update"]
layer2 = ["layer1", "dep:conduit"]
layer3 = ["layer2", "dep:protheus_observability"]

[dependencies]
conduit = { path = "../conduit", optional = true }
ipc = { path = "../ipc", optional = true }
isolation = { path = "../isolation", optional = true }
protheus_observability = { package = "protheus-observability-core-v1", path = "../observability", optional = true }
resource = { path = "../resource", optional = true }
storage = { path = "../storage", optional = true }
task = { path = "../task", optional = true }
update = { path = "../update", optional = true }
