[package]
name = "infring-orchestration-surface-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[dependencies]
infring-layer1-memory = { path = "../../core/layer1/memory" }
infring-task-fabric-core-v1 = { path = "../../core/layer2/tools/task_fabric" }
infring-tooling-core-v1 = { path = "../../core/layer2/tooling" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[workspace]
