[package]
name = "infring-desktop"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../../LICENSE"

[lib]
name = "infring_desktop"
path = "src/lib.rs"

[[bin]]
name = "infring-desktop"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.13"
