[package]
name = "infring-agent-surface"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../../LICENSE"

[lib]
name = "infring_agent_surface"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
protheus-nexus-core-v1 = { path = "../../layer2/nexus" }
