[package]
name = "kernel_layers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Compile-time kernel layer topology for portable Rust-only substrate builds."

[features]
default = []
no_std_probe = []
layer_minus_one = ["dep:infring-nexus-core-v1"]
layer0 = ["layer_minus_one"]
layer1 = ["layer0"]
layer2 = ["layer1"]
layer3 = ["layer2"]

[dependencies]
infring-nexus-core-v1 = { path = "../../layer2/nexus", optional = true }
