[package]
name = "infring-ops-core"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../LICENSE"
default-run = "personas_core"

[lib]
name = "infring_ops_core"
path = "src/lib.rs"

[features]
default = ["embedded-minimal-core", "mimalloc", "no-client-bloat"]
embedded-minimal-core = [
    "layer0-directives",
    "layer0-attention",
    "layer0-receipts",
    "layer0-min-memory",
    "layer-1-substrate-detector",
]
layer0-directives = []
layer0-attention = []
layer0-receipts = []
layer0-min-memory = []
layer-1-substrate-detector = []
mimalloc = ["dep:mimalloc"]
no-client-bloat = []
tiny = []
no_std = ["tiny"]
minimal-alloc = ["minimal"]
pgo-profile = []
embedded-max = ["no_std", "minimal-alloc", "pgo-profile"]
pure-workspace = ["dep:infring-pure-workspace"]
minimal = []
full-substrate = []

[[bin]]
name = "infring-ops"
path = "src/bin/infring-ops.rs"

[[bin]]
name = "infring-ops"
path = "src/bin/infring-ops.rs"

[[bin]]
name = "personas_core"
path = "src/personas_core.rs"

[[bin]]
name = "infringd"
path = "src/bin/infringd.rs"

[[bin]]
name = "infringd"
path = "src/bin/infringd.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"
semver = "1"
walkdir = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num_cpus = "1.16"
sysinfo = { version = "0.30", default-features = false }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
memmap2 = "0.9"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
infring-nexus-core-v1 = { path = "../../layer2/nexus" }
mimalloc = { version = "0.1", default-features = false, optional = true }
infring-pure-workspace = { path = "../../../client/pure-workspace", optional = true }
crossbeam-channel = "0.5"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
urlencoding = "2.1"
png = "0.17"
qrcodegen = "1.8"
lopdf = "0.40"

[dev-dependencies]
tempfile = "3.13"
proptest = "1.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
