[package]
name = "infring_types"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[dependencies]
bincode = "1.3"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
