[package]
name = "protheus-observability-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Rust chaos observability core with blob-backed sovereignty profile."

[lib]
name = "protheus_observability_core_v1"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "observability_core"
path = "src/main.rs"

[dependencies]
protheus-nexus-core-v1 = { path = "../../layer2/nexus" }
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[package.metadata.protheus]
wasm_target = "wasm32-unknown-unknown"
ios_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
android_targets = ["aarch64-linux-android", "x86_64-linux-android"]
