[package]
name = "infring-layer1-primitives"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../../LICENSE"

[lib]
name = "infring_layer1_primitives"
path = "mod.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
infring-layer1-provenance = { path = "../provenance" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
