[package]
name = "infring-layer1-security"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN ../../../LICENSE"

[lib]
name = "infring_layer1_security"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
