[package]
name = "protheus-nexus-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"

[dependencies]
conduit-security = { path = "../conduit-security" }
infring_types = { path = "../../layer1/infring_types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
