[package]
name = "protheus-ops-core-v1"
version = "0.1.0"
edition = "2021"
license = "SEE LICENSE IN LICENSE"
description = "Layer 2 daemon/ops control contracts for InfRing."

[lib]
name = "protheus_ops_core_v1"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }
async-nats = "0.39"
futures = "0.3"

[dev-dependencies]
tempfile = "3.13"
